--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <!-- 播放按钮 -->
         <button id="start" onclick="Start()">开始</button>
         <!-- 播放下一个按钮 -->
-        <button id="start" onclick="window.open('http://tools.hylove.top','_blank')">首页</button>
+        <button id="start" onclick="window.open('http://hi.hylove.top','_blank')">首页</button>
 
         <button style="display: none" id="select-button">
     <select style="appearance:none;text-align: center;" id="selectOption">
